--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ V2X-Java/.idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
 V2X-Java/.idea/caches/build_file_checksums.ser
+*.class
