--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ V2X-Java/.idea/httpRequests
 # Android studio 3.1+ serialized cache file
 V2X-Java/.idea/caches/build_file_checksums.ser
 *.class
+
+V2X-Java/target/
