--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,11 @@ V2X-Java/.idea/caches/build_file_checksums.ser
 *.class
 
 V2X-Java/target/
+
+V2X-Java/obuASetup/
+
+V2X-Java/obuNSetup/
+
+V2X-Java/obuXSetup/
+
+V2X-Java/backup/
